--- a/PracticalLab2.ipynb
+++ b/PracticalLab2.ipynb
@@ -958,7 +958,7 @@
    "source": [
     "**Conclusion**\n",
     "\n",
-    "- The best univariate polynomial regression model on BMI was of degree {best_degree} with validation R² = {results_df.loc[best_index, 'Val R2']:.4f} and test R² = {test_r2:.4f}.\n",
+    "- The best univariate polynomial regression model on BMI was of degree 5 with validation R² = .453 and test R² = .358\n",
     "- The model achieved reasonable predictive performance as indicated by MAE and MAPE scores on both validation and test sets.\n",
     "- Visual inspection of the fitted curve shows that while the model fits the general trend, it may underperform at the extremes of BMI values due to limited data points and the univariate nature.\n",
     "- Limitations:\n",
