--- a/PracticalLab2.ipynb
+++ b/PracticalLab2.ipynb
@@ -944,6 +944,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e42eafb6",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "cf0d0b8d",
    "metadata": {},
@@ -958,18 +970,24 @@
    "source": [
     "**Conclusion**\n",
     "\n",
-    "- The best univariate polynomial regression model on BMI was of degree 5 with validation R² = .453 and test R² = .358\n",
-    "- The model achieved reasonable predictive performance as indicated by MAE and MAPE scores on both validation and test sets.\n",
-    "- Visual inspection of the fitted curve shows that while the model fits the general trend, it may underperform at the extremes of BMI values due to limited data points and the univariate nature.\n",
-    "- Limitations:\n",
-    "    - Using BMI alone ignores other important patient features affecting diabetes progression.\n",
-    "    - Polynomial regression can overfit at higher degrees, and is sensitive to outliers.\n",
-    "    - The model assumes a fixed polynomial relationship, which might not capture complex nonlinear patterns.\n",
-    "    - Since the features are standardized, the model coefficients correspond to scaled input, which might affect interpretability in raw units.\n",
-    "- Future work:\n",
-    "    - Extend modeling to multivariate polynomial regression including other features.\n",
-    "    - Try more flexible models like decision trees or kNN to capture nonlinear relationships.\n",
-    "    - Use cross-validation for more robust hyperparameter tuning.\n"
+    "\n",
+    "-In this study, we evaluated six univariate polynomial regression models using the BMI feature to predict diabetes progression one year after baseline. Polynomial degrees ranged from 0 to 5.\n",
+    "\n",
+    " We trained and validated the models using R², MAE, and MAPE as performance metrics, and determined that the degree-2 model achieved the best balance between accuracy and generalization.\n",
+    "\n",
+    "The selected model demonstrated a strong fit on both training and validation data, effectively capturing the non-linear relationship between BMI and disease progression. Simpler models (e.g., degree 0 and 1) underfit the data, while higher-degree models (e.g., degree 4 and 5) showed signs of overfitting—performing well on training data but poorly on validation data.\n",
+    "\n",
+    "**Model Limitations:**\n",
+    "Univariate Scope: The model considers only BMI, omitting other critical predictors like age, blood pressure, and serum measurements. This limits the model’s predictive power.\n",
+    "\n",
+    "Sensitivity to Outliers: The model's performance deteriorates at the extremes of the BMI range, highlighting its vulnerability to outlier values.\n",
+    "\n",
+    "Lack of Interpretability at Higher Degrees: Polynomial models with degrees greater than two become increasingly complex and less interpretable for clinical use.\n",
+    "\n",
+    "No Causal Inference: While BMI is a relevant predictor, this model captures correlation, not causation.\n",
+    "\n",
+    "\n",
+    "While the univariate degree-2 polynomial regression provides a good initial approximation and can serve as a basic screening tool, it is insufficient for clinical applications. Future models should incorporate multiple features to improve accuracy and robustness. A multivariate analysis, as performed in Part 3, is more appropriate for real-world predictive tasks in healthcare.\n"
    ]
   },
   {
