--- a/PracticalLab2.ipynb
+++ b/PracticalLab2.ipynb
@@ -944,18 +944,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e42eafb6",
-   "metadata": {
-    "vscode": {
-     "languageId": "markdown"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "cf0d0b8d",
    "metadata": {},
@@ -971,7 +959,7 @@
     "**Conclusion**\n",
     "\n",
     "\n",
-    "-In this study, we evaluated six univariate polynomial regression models using the BMI feature to predict diabetes progression one year after baseline. Polynomial degrees ranged from 0 to 5.\n",
+    "- In this study, we evaluated six univariate polynomial regression models using the BMI feature to predict diabetes progression one year after baseline. Polynomial degrees ranged from 0 to 5.\n",
     "\n",
     " We trained and validated the models using R², MAE, and MAPE as performance metrics, and determined that the degree-2 model achieved the best balance between accuracy and generalization.\n",
     "\n",
@@ -1558,21 +1546,33 @@
    "id": "55c4869d",
    "metadata": {},
    "source": [
-    "Based on the evaluation metrics, the multivariate polynomial regression (degree 2) and the decision tree regressor (depth=3) performed best on the validation and test sets, showing a good balance between model complexity and generalization.\n",
+    "##  Final Conclusion & Model Evaluation Summary\n",
     "\n",
-    "Univariate polynomial models of higher degrees (4 and 5) showed signs of overfitting, achieving high training scores but poor validation/test scores. This highlights the risk of using overly complex models with limited features.\n",
+    "In this lab, we explored several models to predict diabetes progression using the Scikit-learn Diabetes dataset. The models included Univariate and Multivariate Polynomial Regression, Decision Trees, and k-Nearest Neighbors (kNN). We evaluated model performance using R², Mean Absolute Error (MAE), and Mean Absolute Percentage Error (MAPE) on training, validation, and test datasets.\n",
     "\n",
-    "The kNN models had moderate performance, with k=3 slightly outperforming k=7 on the test set. However, they were sensitive to the dataset's size and scaling.\n",
+    "###  Best Model\n",
+    "The best-performing model was **kNN with k=3**, which achieved:\n",
+    "- **R² (Test):** 0.29\n",
+    "- **MAE:** 49.89\n",
+    "- **MAPE:** 0.416\n",
     "\n",
-    "**Summary and Conclusion**\n",
+    "It showed consistent and reliable performance across all datasets without signs of overfitting.\n",
     "\n",
-    "- Polynomial regression (especially degree 2) had high training accuracy but dropped significantly on validation and test – clear signs of overfitting.\n",
+    "### Underperforming Models\n",
+    "- **Polynomial Regression (degree=3)** suffered from severe overfitting, with highly negative R² values on validation and test sets.\n",
+    "- **Decision Trees (depth=5)** showed high training performance but weaker validation results, indicating limited generalization.\n",
     "\n",
-    "- Decision trees were interpretable and performed better with shallow depth (3–5), though still prone to overfitting as depth increases.\n",
+    "### Key Takeaways\n",
+    "- **kNN (k=3)** offered the best trade-off between bias and variance.\n",
+    "- **Polynomial Regression (degree=2)** was a stable alternative with balanced performance.\n",
+    "- Complex models can easily overfit if not tuned or regularized properly.\n",
     "\n",
-    "- kNN provided a decent baseline with no assumptions, and k=7 had slightly better generalization than k=3.\n",
+    "### Limitations\n",
+    "- kNN may be computationally expensive on large datasets and is sensitive to feature scaling.\n",
+    "- The dataset has a limited number of features and instances, which might constrain model accuracy.\n",
     "\n",
-    "Overall, the exercise demonstrated the importance of model selection, regularization, and evaluating models on unseen data to avoid overfitting and ensure generalization."
+    "###  Recommendation\n",
+    "Future work can focus on feature engineering, hyperparameter tuning, and ensemble methods (like Random Forest or Gradient Boosting) to improve prediction accuracy and model robustness.\n"
    ]
   }
  ],
